# 8tracks

./: .8tracksrc.example  8tracks.cabal  README.md
src/: Main.hs
src/EightTracks/: Config.hs  Modes.hs  Player.hs  Types.hs
